rnsc/test_data/rns_integration/error/parser/inner_class_sub_directive/missing_operand.rns
; Tests that missing operand after .inner_class is detected and reported.
; Expected error: E-020 (missing implicit type hint operand)

.class public MyClass
.super java/lang/Object

.inner_classes_attr
    .inner_class
.inner_classes_attr_end

.class_end
